--- a/src/app/components/product/product-nav-bar/product-nav-bar.component.html
+++ b/src/app/components/product/product-nav-bar/product-nav-bar.component.html
@@ -1,8 +1,19 @@
-<ul class="nav nav-pills">
-  <li>
-    <button class="btn btn-outline-info m-lg-2" (click)="onGetAllProduct()">ALL</button>
-    <button class="btn btn-outline-info m-lg-2" (click)="onGetSelectedProduct()">Selected</button>
+<nav class="nav navbar-expand-sm bg-light navbar-dark">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <button class="btn btn-outline-info btn-sm m-lg-3" (click)="onGetAllProduct()">ALL</button>
+      <button class="btn btn-outline-info btn-sm m-lg-3" (click)="onGetSelectedProduct()">Selected</button>
 
-  </li>
+    </li>
+  </ul>
+  <ul class="navbar-nav m-lg-auto">
+    <li>
+      <form action="" #f="ngForm" (ngSubmit)="onSearch(f.value)" class="form-check-inline">
+        <input type="text" ngModel name="keyword">
+        <button type="submit" class="btn btn-info btn-sm"><i class="fa fa-search"></i></button>
 
-</ul>
+      </form>
+    </li>
+  </ul>
+</nav>
+
